monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus

spec:
  type: ClusterIP
  selector:
    app: prometheus

  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: http
